--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,2 +1,5 @@
 [variables]
     PHP_VERSION = '8.2'
+
+[phases.setup]
+    nixPkgs = ['php82', 'php82Extensions.gd', 'php82Extensions.pdo_pgsql', 'php82Extensions.mbstring', 'php82Extensions.xml', 'php82Extensions.bcmath']
